# resource_generate_workflow

./: .env.example  .gitignore  Makefile  README.md  config.default.yaml  debug_validation.py  env.example  main.py  minimal_test.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  simple_test.py  test_simple.py
.cursor/rules/: global.mdc
app/: cli.py  config.py
app/clients/: claude.py  github.py  openai.py  s3.py  slack.py
app/generators/: article.py  base.py  description.py  script.py  script_json.py  thumbnail.py  tweet.py
app/processors/: __init__.py  chapter.py  content.py  image.py  paragraph.py  section.py
app/utils/: file.py  logger.py  markdown.py
app/workflow/: __init__.py  checkpoint.py  engine.py  task_manager.py
checkpoints/: checkpoint-20250522162711.json  checkpoint-20250522162717.json  checkpoint-20250522162913.json  checkpoint-20250522162914.json  checkpoint-20250522163049.json  checkpoint-20250522163050.json  checkpoint-20250522163051.json  checkpoint-20250522163052.json  checkpoint-20250522163053.json  checkpoint-20250522163256.json  checkpoint-20250522163257.json  checkpoint-20250522163258.json  checkpoint-20250522163259.json  checkpoint-20250522163300.json  checkpoint-20250522163558.json  checkpoint-20250522163559.json  checkpoint-20250522163600.json  checkpoint-20250522163601.json  checkpoint-20250522164028.json  checkpoint-20250522164029.json  checkpoint-20250522164030.json  checkpoint-20250522164031.json  checkpoint-20250522164032.json  checkpoint-20250522164149.json  checkpoint-20250522164150.json  checkpoint-20250522164151.json  checkpoint-20250522164152.json  checkpoint-20250522164517.json  checkpoint-20250522164518.json  checkpoint-20250522164519.json  checkpoint-20250522164520.json  checkpoint-20250522164521.json  checkpoint-20250522164923.json  checkpoint-20250522164924.json  checkpoint-20250522164925.json  checkpoint-20250522164926.json  checkpoint-20250522164927.json  checkpoint-20250522165107.json  checkpoint-20250522165108.json  checkpoint-20250522165109.json  (+49 more)
config/: __init__.py  credentials.py  development.yml  settings.py  test.yml
core/: content_generator.py  file_manager.py  parser.py  processor.py  state_manager.py
data/input/: webapi_basics.md
docs/: architecture-design.md  architecture_design.md  workflow.md
generators/: article.py  description.py  json_script.py  script.py  structure.py  thumbnail.py  tweets.py
generators/image/: drawio_processor.py  mermaid_processor.py  processor.py  svg_processor.py
prompts/message/: image.md  structure.md  thumbnail.md  tweet.md
prompts/system/: article.md  description.md  script_json.md  structure.md  thumbnail.md
requirements/: test.txt
services/: claude.py  client.py  github.py  notifier.py  storage.py
src/: __init__.py  cli.py
src/clients/: __init__.py  base.py  claude.py  github.py  openai.py  redis.py  s3.py  slack.py
src/config/: __init__.py  constants.py  schemas.py  settings.py
src/converters/: __init__.py  base.py  drawio.py  mermaid.py  svg.py
src/core/: __init__.py  event_bus.py  events.py  metrics.py  orchestrator.py  state.py  state_manager.py
src/generators/: __init__.py  article.py  base.py  script.py  tweet.py
src/models/: __init__.py  content.py  task.py  workflow.py
src/parsers/: converter.py  image.py  markdown.py  yaml.py
src/processors/: __init__.py  base.py  chapter.py  content.py  markdown.py  paragraph.py  section.py  structure.py
src/resource_generate_workflow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/utils/: __init__.py  cache.py  logger.py  prompt_loader.py  rate_limiter.py  retry.py  validation.py
src/workers/: __init__.py  aggregator.py  ai.py  base.py  media.py  parser.py  pool.py
src/workflow/: __init__.py  definition.py  (+2 more)
templates/: description_template.md  section_structure_template.yml  thumbnail_template.yaml
tests/: __init__.py  conftest.py  test_api_clients.py  test_article_generator.py  test_checkpoint_manager.py  test_claude_service.py  test_cli.py  test_client.py  test_content_generator.py  test_content_processor.py  test_description_generator.py  test_file_manager.py  test_generators.py  test_github_service.py  test_image_processor.py  test_image_processors.py  test_integration.py  test_json_script_generator.py  test_notifier_service.py  test_parallel.py  test_parser.py  test_processor.py  test_retry.py  test_script_generator.py  test_state_manager.py  test_storage_service.py  test_task_manager.py  test_tweets_generator.py  test_utils.py  test_workflow_engine.py
utils/: exceptions.py  helpers.py  logging.py  parallel.py  retry.py
(+110 files in other folders)
