[project]
name = "resource-generate-workflow"
version = "0.1.0"
description = "高性能リソース生成ワークフローエンジン"
authors = [
    {name = "Develogon", email = ""}
]
requires-python = ">=3.11"
dependencies = [
    "asyncio",
    "aioredis>=2.0.0",
    "httpx>=0.24.0",
    "tenacity>=8.0.0",
    "prometheus-client>=0.16.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "pillow>=10.0.0",
    "cairosvg>=2.7.0",
    "boto3>=1.28.0",
    "click>=8.0.0",
    "structlog>=23.0.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
resource-workflow = "src.cli:main"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
python_paths = ["src"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--disable-warnings" 